# PrivateMp4Parser

./: .gitignore  AGENT.md  CMakeLists.txt  README.md
docs/: block_header.txt  dumped_file_partial.txt  file_header.txt  file_structure.txt  group_header.txt
src/: frame_locator.cpp  frame_locator.h  frame_locator_internal.cpp  frame_locator_internal.h  frame_query.cpp  frame_query.h  main.cpp  mapped_file_win32.cpp  mapped_file_win32.h  mp4_format.h
tests/: frame_locator_internal_test.cpp  frame_locator_test.cpp  frame_query_test.cpp  mapped_file_win32_test.cpp  mp4_format_test.cpp  synthetic_mp4_support_test.cpp
tools/: benchmark_locate_frame.cpp  generate_synthetic_mp4.cpp  synthetic_mp4_support.cpp  synthetic_mp4_support.h
